--- a/MyTrade/Views/AdminReports/ViewProfileForAdmin.cshtml
+++ b/MyTrade/Views/AdminReports/ViewProfileForAdmin.cshtml
@@ -35,14 +35,14 @@
                             <div class="col-sm-4">
                                 <div class="form-group">
                                     <label for="SponosorName">Sponsor Name</label>
-                                    @Html.TextBoxFor(m => m.SponsorName, new { @class = "form-control", placeholder = "Sponsor Name",@onkeypress = "return onlyAlphabets();" })
+                                    @Html.TextBoxFor(m => m.SponsorName, new { @class = "form-control", placeholder = "Sponsor Name", @onkeypress = "return onlyAlphabets();" })
 
                                 </div>
                             </div>
                             <div class="col-sm-4">
                                 <div class="form-group">
                                     <label for="FirstName">First Name</label>
-                                    @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control", placeholder = "First Name",@onkeypress = "return onlyAlphabets();" })
+                                    @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control", placeholder = "First Name", @onkeypress = "return onlyAlphabets();" })
 
                                 </div>
                             </div>
@@ -63,7 +63,7 @@
                             <div class="col-md-4">
                                 <div class="form-group">
                                     <label for="phone">Mobile No</label>
-                                    @Html.TextBoxFor(m => m.MobileNo, new { @class = "form-control",maxlength="10", placeholder = "Mobile No",@onkeypress = "return isNumberKey(event);" })
+                                    @Html.TextBoxFor(m => m.MobileNo, new { @class = "form-control", maxlength = "10", placeholder = "Mobile No", @onkeypress = "return isNumberKey(event);" })
                                 </div>
                             </div>
                             <div class="col-md-4">
@@ -75,13 +75,13 @@
                             <div class="col-md-4">
                                 <div class="form-group">
                                     <label for="country">Pin Code</label>
-                                    @Html.TextBoxFor(m => m.PinCode, new { @class = "form-control", placeholder = "Pin Code",@onchange = "return getstatecity()" })
+                                    @Html.TextBoxFor(m => m.PinCode, new { @class = "form-control", placeholder = "Pin Code", @onchange = "return getstatecity()" })
                                 </div>
                             </div>
                             <div class="col-md-4">
                                 <div class="form-group">
                                     <label for="address">State</label>
-                                    @Html.TextBoxFor(m => m.State, new { @class = "form-control", placeholder = "State",@readonly=true })
+                                    @Html.TextBoxFor(m => m.State, new { @class = "form-control", placeholder = "State", @readonly = true })
                                 </div>
                             </div>
                             <div class="col-md-4">
@@ -105,7 +105,8 @@
                             <div class="col-md-4">
                                 <div class="form-group">
                                     <label>Pan Image</label>
-                                    <input type="file" name="Image" id="Image" />
+                                    <input type="file" name="Image" id="Image" onchange="loadFile_adhar(event)" />
+                                    <img src="@Model.Image" height="70" width="150" id="PanImage"/>
                                 </div>
                             </div>
                             <div class="col-md-4">
@@ -175,12 +176,13 @@
                             <div class="col-md-4">
                                 <div class="form-group">
                                     <input class="btn btn-success" type="submit" value="Update" id="Update" name="Update" />
-                                    <a href="/AdminReports/ViewProfile?Id=@Model.Fk_UserId" class="btn btn-info">Back To Profile</a>
+                                    @*<a href="/AdminReports/ViewProfile?Id=@Model.Fk_UserId" class="btn btn-info">Back To List</a>*@
+                                    <a href="/AdminReports/AssociateList" class="btn btn-info">Back To List</a>
                                 </div>
                             </div>
                         </div>
-                            </div>
-                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -242,59 +244,61 @@
         }
     }
 
- $(document).ready(function () {
-     $("#Gender").val($("#hdf").val()).attr("selected", "selected");
- })
+    $(document).ready(function () {
+        $("#Gender").val($("#hdf").val()).attr("selected", "selected");
+    })
 
 
- function getstatecity() {
-     $(".errortext").removeClass("errortext");
-     $.ajax({
-         url: "/AdminReports/GetStateCity",
-         Type: "Get",
-         DataType: "JSON",
-         data: { PinCode: $("#PinCode").val() },
-         success: function (data) {
-             if (data.Result == "1") {
-                 $("#State").val(data.State);
-                 $("#City").val(data.City);
-             }
-             else {
-                 $("#State").val('');
-                 $("#City").val('');
-                 $("#PinCode").val('');
-                 $("#PinCode").addClass('errortext');
-                 $('#PinCode').focus();
-                 alert(data.Result);
-             }
-         }
-     });
- }
+    function getstatecity() {
+        $(".errortext").removeClass("errortext");
+        $.ajax({
+            url: "/AdminReports/GetStateCity",
+            Type: "Get",
+            DataType: "JSON",
+            data: { PinCode: $("#PinCode").val() },
+            success: function (data) {
+                if (data.Result == "1") {
+                    $("#State").val(data.State);
+                    $("#City").val(data.City);
+                }
+                else {
+                    $("#State").val('');
+                    $("#City").val('');
+                    $("#PinCode").val('');
+                    $("#PinCode").addClass('errortext');
+                    $('#PinCode').focus();
+                    alert(data.Result);
+                }
+            }
+        });
+    }
 
- function GetBankDetails() {
-     debugger;
-     $.ajax({
-         url: 'https://ifsc.razorpay.com/' + $('#IFSCCode').val(),
-         Type: "Get",
-         DataType: "JSON",
-         success: function (data) {
-             $("#BankName").val(data.BANK);
-             $("#BranchName").val(data.BRANCH);
-         },
-         error: function () {
-             Snackbar.show({
-                 text: 'IFSC Code not found',
-                 actionTextColor: '#fff',
-                 backgroundColor: '#e7515a',
-                 pos: 'top-right'
-             });
-             $("#BankName").val('');
-             $("#BranchName").val('');
-         }
-     });
- }
+    function GetBankDetails() {
+        debugger;
+        $.ajax({
+            url: 'https://ifsc.razorpay.com/' + $('#IFSCCode').val(),
+            Type: "Get",
+            DataType: "JSON",
+            success: function (data) {
+                $("#BankName").val(data.BANK);
+                $("#BranchName").val(data.BRANCH);
+            },
+            error: function () {
+                Snackbar.show({
+                    text: 'IFSC Code not found',
+                    actionTextColor: '#fff',
+                    backgroundColor: '#e7515a',
+                    pos: 'top-right'
+                });
+                $("#BankName").val('');
+                $("#BranchName").val('');
+            }
+        });
+    }
 
-
-
-
+    var loadFile_adhar = function (event) {
+        var image = document.getElementById('PanImage');
+        image.src = URL.createObjectURL(event.target.files[0]);
+        //$("#img").val(1);
+    };
 </script>
