--- a/MyTrade/Views/Admin/AdvanceDeduction.cshtml
+++ b/MyTrade/Views/Admin/AdvanceDeduction.cshtml
@@ -54,7 +54,13 @@
                             </div>
                             <div class="col-md-4">
                                 <div class="form-group">
-                                    Narration
+                                    Transaction Date<span style="color: red">*</span>
+                                    @Html.TextBoxFor(m => m.TransactionDate, new { @class = "form-control", @placeholder = "dd/mm/yyyy", @readonly = true })
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="form-group">
+                                    Narration<span style="color: red">*</span>
                                     @Html.TextAreaFor(m => m.Narration, new { @class = "form-control", @placeholder = "Narration" })
                                 </div>
                             </div>
@@ -67,13 +73,66 @@
                             </div>
                         </div>
                     </div>
+                    <div class="widget-content widget-content-area br-6">
+                        <div class="widget-header">
+                            <div class="row">
+                                <div class="col-xl-12 col-md-12 col-sm-12 col-12">
+                                    <h4>Advance Deduction List</h4>
+                                    <span class="text-danger">
+                                        @TempData["deduction"]
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                      
+                        <table id="html5-extension" class="table table-hover non-hover" style="width:100%" data-page-length='20'>
+                            <thead>
+                                <tr>
+                                    <th>Sr No.</th>
+                                    <th>Login Id</th>
+                                    <th>Name</th>
+                                    <th>Amount</th>
+                                    <th>Narration</th>
+                                    <th>Type</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @if (Model != null)
+                                {
+                                    if (Model.lstdeduction != null)
+                                    {
+                                        int i = 1;
+                                        foreach (var Item in Model.lstdeduction)
+                                        {
+                                            <tr class="text-left">
+                                                <td>@i</td>
+                                                <td>@Item.LoginId</td>
+                                                <td>@Item.Name</td>
+                                                <td>@Item.Amount</td>
+                                                <td>@Item.Narration</td>
+                                                <td>@Item.DeductionType</td>
+                                            </tr>
+                                            i++;
+                                        }
+                                    }
+                                }
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 }
 
+<script src="~/plugins/flatpickr/flatpickr.js"></script>
+<script src="~/plugins/flatpickr/custom-flatpickr.js"></script>
+<link href="~/plugins/flatpickr/flatpickr.css" rel="stylesheet" type="text/css">
+<link href="~/plugins/flatpickr/custom-flatpickr.css" rel="stylesheet" type="text/css">
 <script>
+    var f3 = flatpickr(document.getElementById('TransactionDate'), {
+        //mode: "range"
+    });
     function validate() {
         if ($('#LoginId').val() == '') {
             $("#LoginId").addClass('errortext');
@@ -90,7 +149,17 @@
             $('#CrAmount').focus();
             return false;
         }
-        if ($('#Narration').val() == '0') {
+        if ($('#DeductionType').val() == '0') {
+            $("#DeductionType").addClass('errortext');
+            $('#DeductionType').focus();
+            return false;
+        }
+        if ($('#TransactionDate').val() == '') {
+            $("#TransactionDate").addClass('errortext');
+            $('#TransactionDate').focus();
+            return false;
+        }
+        if ($('#Narration').val() == '') {
             $("#Narration").addClass('errortext');
             $('#Narration').focus();
             return false;
