--- a/MyTrade/Views/Admin/UnUsedPin.cshtml
+++ b/MyTrade/Views/Admin/UnUsedPin.cshtml
@@ -66,7 +66,7 @@
                                         <th>Login Id</th>
                                         <th>Name</th>
                                         <th>E-Pin No</th>
-                                        <th>Package</th>
+                                        @*<th>Package</th>*@
                                         <th>Owner</th>
                                         <th>Created Date</th>
                                         <th>Registered To</th>
@@ -86,7 +86,7 @@
                                                     <td>@Item.LoginId</td>
                                                     <td>@Item.Name</td>
                                                     <td>@Item.ePinNo</td>
-                                                    <td>@Item.Package</td>
+                                                    @*<td>@Item.Package</td>*@
                                                     <td> @Item.DisplayName</td>
                                                     <td>@Item.AddedOn</td>
                                                     <td> @Item.RegisteredTo </td>
