--- a/MyTrade/Views/Admin/WalletList.cshtml
+++ b/MyTrade/Views/Admin/WalletList.cshtml
@@ -57,10 +57,11 @@
                                     <label>Status</label>
                                     <input type="hidden" id="st" value="@Model.Status" />
                                     <select id="Status" name="Status" class="form-control">
-                                        <option value="0">-Select-</option>
+                                        @*<option value="0">-Select-</option>*@
+                                        <option value="Pending">Pending</option>
                                         <option value="Approved">Approve</option>
                                         <option value="Declined">Decline</option>
-                                        <option value="Pending">Pending</option>
+                                       
                                     </select>
                                 </div>
                             </div>
@@ -204,7 +205,7 @@
         //$('body').removeClass().removeAttr('style'); $('.modal-backdrop').remove();
     }
 
-    if ($("#st").val() != 0) {
+    if ($("#st").val() != "Pending") {
         $("#Status").val($("#st").val()).attr("selected", "selected");
     }
 
