--- a/MyTrade/Views/Admin/AdvanceDeduction.cshtml
+++ b/MyTrade/Views/Admin/AdvanceDeduction.cshtml
@@ -92,6 +92,7 @@
                                     <th>Login Id</th>
                                     <th>Name</th>
                                     <th>Amount</th>
+                                    <th>Transaction Date</th>
                                     <th>Narration</th>
                                     <th>Type</th>
                                 </tr>
@@ -109,6 +110,7 @@
                                                 <td>@Item.LoginId</td>
                                                 <td>@Item.Name</td>
                                                 <td>@Item.Amount</td>
+                                                <td>@Item.TransactionDate</td>
                                                 <td>@Item.Narration</td>
                                                 <td>@Item.DeductionType</td>
                                             </tr>
