--- a/MyTrade/Views/Admin/UnUsedPin.cshtml
+++ b/MyTrade/Views/Admin/UnUsedPin.cshtml
@@ -42,11 +42,17 @@
                             </div>
                             <div class="col-lg-3">
                                 <div class="form-group">
-                                    <label>Package  </label>
-                                    @Html.DropDownListFor(m => m.Package, new SelectList(ViewBag.ddlProduct, "Value", "Text"), new { @class = "form-control", @onchange = "FillAmount();" })
+                                    <label>Status  </label>
+                                    <input type="hidden" id="stt" value="@Model.Status" />
+                                    <select id="Status" name="Status" class="form-control">
+                                        <option value="">-Select-</option>
+                                        <option value="Used">Used</option>
+                                        <option value="Transfer">Transfer</option>
+                                        <option value="Available">Available</option>
+                                      
+                                    </select>
                                 </div>
                             </div>
-
                         </div>
                         <div class="row">
 
@@ -109,3 +115,11 @@
         </div>
     </div>
 }
+<script src="~/plugins/flatpickr/flatpickr.js"></script>
+<script src="~/plugins/flatpickr/custom-flatpickr.js"></script>
+<script src="~/MyTradeWebsite/assets/js/jquery.min.js"></script>
+<script>
+    if ($("#stt").val() != "") {
+        $("#Status").val($("#stt").val()).attr("selected", "selected");
+    }
+</script>
